--- a/design.css
+++ b/design.css
@@ -271,17 +271,36 @@ button:disabled { opacity: 0.5; cursor: unset;}
     background: var(--gray12);
 }
 
-.github-icon {
-    width: 3rem;
-    margin: 1rem;
-    margin-bottom: 0;
-    transition: var(--transition);
-}
-.github-icon:hover {
-    transform: translateY(-5px);
+/* View Code Button */
+
+
+
+.btn-view-code {
+    color: var(--gray);
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    max-width: 8rem;
+    border: 2px solid var(--gray);
+    padding: 0.5rem 2rem;
+    margin: 1rem auto;
+    border-radius: 3rem;
+    transition: 0.2s;
 }
 
-.modal-tools img {
+.btn-view-code > img {
+    width: 1.25rem;
+}
+
+.btn-view-code:hover > img {
+    content: url('images/github-icon.svg');
+}
+.btn-view-code:hover {
+    color: white;
+    background: var(--gray);
+}
+
+.modal-tools > img {
     width: 2rem;
     margin: 0.5rem;
 }
